# serdepp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
3rd/: CMakeLists.txt
3rd/toml11-v4.4.0/: toml.hpp
3rd/yaml-cpp-v0.8.0/: CMakeLists.txt
benchmark/: CMakeLists.txt  benchmark.cpp  data_type_benchmark.cpp  syntax_benchmark.cpp
examples/: CMakeLists.txt  example.cpp  pointer.cpp  rttr.cpp  simple_example.cpp  sugar.cpp
include/serdepp/: meta.hpp  ostream.hpp  serde.hpp  serializer.hpp
include/serdepp/adaptor/: fmt.hpp  nlohmann_json.hpp  rapidjson.hpp  reflection.hpp  sstream.hpp  toml11.hpp  yaml-cpp.hpp
include/serdepp/attribute/: make_optional.hpp  meta.hpp  skip.hpp  string_convert.hpp
include/serdepp/detail/: adaptor.hpp  meta.hpp  rttr.hpp  serializer_def.hpp
include/serdepp/detail/adaptor/: fmt_define.hpp  fmt_impl.hpp  nlohmann_json_define.hpp  nlohmann_json_impl.hpp  rapidjson_define.hpp  rapidjson_impl.hpp  sstream_define.hpp  sstream_impl.hpp  toml11_define.hpp  toml11_impl.hpp  yaml-cpp_define.hpp  yaml-cpp_impl.hpp
include/serdepp/detail/extend/rttr/: fmt_define.hpp  fmt_impl.hpp  nlohmann_json_define.hpp  nlohmann_json_impl.hpp  rapidjson_define.hpp  rapidjson_impl.hpp  sstream_define.hpp  sstream_impl.hpp  toml11_define.hpp  toml11_impl.hpp  yaml-cpp_define.hpp  yaml-cpp_impl.hpp
include/serdepp/detail/impl/: serializer_impl.hpp
include/serdepp/extend/: rttr.hpp
include/serdepp/extend/rttr/: fmt.hpp  nlohmann_json.hpp  rapidjson.hpp  sstream.hpp  toml11.hpp  yaml-cpp.hpp
tests/: CMakeLists.txt  serializer.cpp
