set(third_party_folder "ThirdParty")
set(THIRD_PARTY_ROOT "${CMAKE_CURRENT_SOURCE_DIR}")


add_subdirectory(rttr)
if(TARGET rttr_core)
    set_target_properties(rttr_core PROPERTIES FOLDER "${third_party_folder}/RTTR")
endif()
if(TARGET rttr_core_lib)
    set_target_properties(rttr_core_lib PROPERTIES FOLDER "${third_party_folder}/RTTR")
endif()
if(TARGET rttr_core_s)
    set_target_properties(rttr_core_s PROPERTIES FOLDER "${third_party_folder}/RTTR")
endif()
if(TARGET rttr_core_lib_s)
    set_target_properties(rttr_core_lib_s PROPERTIES FOLDER "${third_party_folder}/RTTR")
endif()

if(NOT TARGET Catch2::Catch2)
    set(CATCH_INCLUDE_DIR ${THIRD_PARTY_ROOT}/rttr/3rd_party/catch-v3.11.0)
    add_library(Catch2 INTERFACE)
    add_library(Catch2::Catch2 ALIAS Catch2)
    set_target_properties(Catch2 PROPERTIES FOLDER "${third_party_folder}/Catch2")
    target_include_directories(Catch2 INTERFACE ${CATCH_INCLUDE_DIR})
    add_library(Catch2WithMain STATIC ${CATCH_INCLUDE_DIR}/catch2/catch_amalgamated.cpp)
    add_library(Catch2::Catch2WithMain ALIAS Catch2WithMain)
    set_target_properties(Catch2WithMain PROPERTIES FOLDER "${third_party_folder}/Catch2")
endif()

if(NOT TARGET magic_enum::magic_enum)
    set(MAGIC_ENUM_ROOT_DIR "${THIRD_PARTY_ROOT}/magic_enum-v0.9.7")
    add_library(magic_enum INTERFACE)
    add_library(magic_enum::magic_enum ALIAS magic_enum)
    target_include_directories(magic_enum INTERFACE ${MAGIC_ENUM_ROOT_DIR}/include)
    set_target_properties(magic_enum PROPERTIES FOLDER "${third_party_folder}/magic_enum")
endif()

if(NOT TARGET fmt::fmt-header-only)
    set(FMT_ROOT_DIR "${THIRD_PARTY_ROOT}/fmt-v12.1.0")
    add_subdirectory(${FMT_ROOT_DIR})

    set_target_properties(fmt PROPERTIES FOLDER "${third_party_folder}/fmt")
    set_target_properties(fmt-header-only PROPERTIES FOLDER "${third_party_folder}/fmt")
endif()

if(NOT TARGET nameof::nameof)
    set(NAMEOF_ROOT_DIR "${THIRD_PARTY_ROOT}/nameof-v0.10.4")
    add_library(nameof INTERFACE)
    add_library(nameof::nameof ALIAS nameof)
    target_include_directories(nameof INTERFACE ${NAMEOF_ROOT_DIR}/include)
    set_target_properties(nameof PROPERTIES FOLDER "${third_party_folder}/nameof")
endif()

if(NOT TARGET nlohmann_json::nlohmann_json)
    set(NLOHMANN_JSON_ROOT_DIR "${THIRD_PARTY_ROOT}/nlohmann_json-v3.12.0")
    add_library(nlohmann_json INTERFACE)
    add_library(nlohmann_json::nlohmann_json ALIAS nlohmann_json)
    target_include_directories(nlohmann_json INTERFACE ${NLOHMANN_JSON_ROOT_DIR}/include)
    set_target_properties(nlohmann_json PROPERTIES FOLDER "${third_party_folder}/nlohmann_json")
endif()

if(NOT TARGET RapidJSON::RapidJSON)
    set(RAPIDJSON_ROOT_DIR "${THIRD_PARTY_ROOT}/rapidjson-v1.1.0")
    add_library(RapidJSON INTERFACE)
    add_library(RapidJSON::RapidJSON ALIAS RapidJSON)
    target_include_directories(RapidJSON INTERFACE ${RAPIDJSON_ROOT_DIR}/include)
    set_target_properties(RapidJSON PROPERTIES FOLDER "${third_party_folder}/RapidJSON")
endif()

if(NOT TARGET toml11::toml11)
    set(TOML11_ROOT_DIR "${THIRD_PARTY_ROOT}/toml11-v4.4.0")
    add_library(toml11 INTERFACE)
    add_library(toml11::toml11 ALIAS toml11)
    target_include_directories(toml11 INTERFACE ${TOML11_ROOT_DIR})
    set_target_properties(toml11 PROPERTIES FOLDER "${third_party_folder}/toml11")
endif()

if(NOT TARGET yaml-cpp::yaml-cpp)
    set(YAML_CPP_ROOT_DIR "${THIRD_PARTY_ROOT}/yaml-cpp-v0.8.0")
    #add_subdirectory(${YAML_CPP_ROOT_DIR})

    set(contrib-pattern "${YAML_CPP_ROOT_DIR}/src/contrib/*.cpp")
    set(src-pattern "${YAML_CPP_ROOT_DIR}/src/*.cpp")
    set(YAML_CPP_STATIC_DEFINE true)
    if (CMAKE_VERSION VERSION_GREATER 3.12)
        list(INSERT contrib-pattern 0 CONFIGURE_DEPENDS)
        list(INSERT src-pattern 0 CONFIGURE_DEPENDS)
    endif()

    file(GLOB yaml-cpp-contrib-sources ${contrib-pattern})
    file(GLOB yaml-cpp-sources ${src-pattern})

    add_library(yaml-cpp STATIC ${yaml-cpp-sources})
    add_library(yaml-cpp::yaml-cpp ALIAS yaml-cpp)
    target_include_directories(yaml-cpp
        PUBLIC ${YAML_CPP_ROOT_DIR}/include
        PRIVATE ${YAML_CPP_ROOT_DIR}/src
    )
    target_sources(yaml-cpp PRIVATE 
        $<$<BOOL:${YAML_CPP_BUILD_CONTRIB}>:${yaml-cpp-contrib-sources}>)
    target_sources(yaml-cpp PRIVATE 
        ${yaml-cpp-sources})
    target_compile_definitions(yaml-cpp PUBLIC YAML_CPP_STATIC_DEFINE)
    set_target_properties(yaml-cpp PROPERTIES CXX_STANDARD 11)
    set_target_properties(yaml-cpp PROPERTIES FOLDER "${third_party_folder}/yaml-cpp")
endif()
